@@ -11,11 +11,10 @@ import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteService;
 import java.time.Clock;
 import java.time.LocalDate;
 import java.time.Year;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static java.time.temporal.TemporalAdjusters.lastDayOfYear;
+import static java.util.Collections.emptyList;
 import static org.synyx.urlaubsverwaltung.person.Role.BOSS;
 import static org.synyx.urlaubsverwaltung.person.Role.DEPARTMENT_HEAD;
 import static org.synyx.urlaubsverwaltung.person.Role.OFFICE;
@@ -33,61 +32,73 @@ public class SickNoteStatisticsService {
     private final SickNoteService sickNoteService;
     private final DepartmentService departmentService;
     private final PersonService personService;
+    private final Clock clock;
 
-    SickNoteStatisticsService(SickNoteService sickNoteService, DepartmentService departmentService, PersonService personService) {
+    SickNoteStatisticsService(
+        SickNoteService sickNoteService,
+        DepartmentService departmentService,
+        PersonService personService,
+        Clock clock
+    ) {
         this.sickNoteService = sickNoteService;
         this.departmentService = departmentService;
         this.personService = personService;
+        this.clock = clock;
     }
 
-    SickNoteStatistics createStatisticsForPerson(Person person, Clock clock) {
+    /**
+     * Creates a {@link SickNoteStatistics} for the given year and person.
+     *
+     * <p>
+     * The given person is relevant for the visibility of sick notes and active persons considered in the statistics.
+     *
+     * @param year   the year for which the statistics should be created
+     * @param person the person for whom the statistics should be created
+     * @return a {@link SickNoteStatistics} object containing sick notes and visible active persons
+     */
+    SickNoteStatistics createStatisticsForPerson(Year year, Person person) {
 
-        final Year year = Year.now(clock);
         final LocalDate today = LocalDate.now(clock);
 
         final LocalDate firstDayOfYear = year.atDay(1);
         final LocalDate lastDayOfYear = firstDayOfYear.with(lastDayOfYear());
-        final List<SickNote> sickNotes = getSickNotes(person, firstDayOfYear, lastDayOfYear);
-        final List<Person> visibleActivePersonsForPerson = getVisibleActivePersonsForPerson(person);
 
-        return new SickNoteStatistics(year, today, sickNotes, visibleActivePersonsForPerson);
+        final List<Person> persons = getStatisticRelevantPersons(year, person);
+        final List<SickNote> sickNotes = getSickNotes(persons, firstDayOfYear, lastDayOfYear);
+
+        return new SickNoteStatistics(year, today, sickNotes, persons);
     }
 
-    private List<Person> getVisibleActivePersonsForPerson(Person person) {
+    private List<Person> getStatisticRelevantPersons(Year year, Person person) {
 
         if (person.hasRole(OFFICE) || (person.hasRole(BOSS) && person.hasRole(SICK_NOTE_VIEW))) {
-            return personService.getActivePersons();
+            // we don't know whether a person has been active/inactive over a certain year
+            // Therefore, we return all persons having an account in the given year.
+            return personService.getAllPersonsHavingAccountInYear(year);
         }
 
         if ((person.hasRole(DEPARTMENT_HEAD) || person.hasRole(SECOND_STAGE_AUTHORITY)) && person.hasRole(SICK_NOTE_VIEW)) {
-            return getMembersForPerson(person);
+            final List<Person> managedMembers = departmentService.getManagedMembersOfPerson(person, year);
+            if (year.equals(Year.now(clock))) {
+                // we can, however, determine it for THIS year.
+                return managedMembers.stream().filter(Person::isActive).toList();
+            } else {
+                // Sadly, we do not know whether a person has been active or inactive in a year before this year
+                return managedMembers;
+            }
         }
 
-        return Collections.emptyList();
+        if (person.hasRole(SICK_NOTE_VIEW)) {
+            return List.of(person);
+        }
+
+        return emptyList();
     }
 
-    private List<SickNote> getSickNotes(Person person, LocalDate from, LocalDate to) {
-
-        if (person.hasRole(OFFICE) || (person.hasRole(BOSS) && person.hasRole(SICK_NOTE_VIEW))) {
-            return sickNoteService.getAllActiveByPeriod(from, to);
+    private List<SickNote> getSickNotes(List<Person> persons, LocalDate from, LocalDate to) {
+        if (persons.isEmpty()) {
+            return List.of();
         }
-
-        final List<SickNote> sickNotes;
-        if ((person.hasRole(DEPARTMENT_HEAD) || person.hasRole(SECOND_STAGE_AUTHORITY)) && person.hasRole(SICK_NOTE_VIEW)) {
-            final List<Person> members = getMembersForPerson(person);
-            sickNotes = sickNoteService.getForStatesAndPerson(List.of(ACTIVE), members, from, to);
-        } else {
-            sickNotes = List.of();
-        }
-
-        return sickNotes;
-    }
-
-    private List<Person> getMembersForPerson(Person person) {
-        final List<Person> membersDH = person.hasRole(DEPARTMENT_HEAD) ? departmentService.getMembersForDepartmentHead(person) : List.of();
-        final List<Person> membersSSA = person.hasRole(SECOND_STAGE_AUTHORITY) ? departmentService.getMembersForSecondStageAuthority(person) : List.of();
-        return Stream.concat(membersDH.stream(), membersSSA.stream())
-            .distinct()
-            .toList();
+        return sickNoteService.getForStatesAndPerson(List.of(ACTIVE), persons, from, to);
     }
 }
